<resources>
    <string name="app_name">PhitBoi</string>
    <string name="diet">Diet</string>
    <string name="exercise">Exercise</string>
    <string name="carb">carb</string>
    <string name="fat">fat</string>
    <string name="protein">protein</string>
    <string name="set_goals">set goals</string>
    <string name="add_meal">new meal</string>
    <string name="textProteinLbl">Protein:</string>
    <string name="textProteinGram">0 / 0g</string>
    <string name="textProteinPct">0 / 0%</string>
    <string name="textCarbLbl">Carb:</string>
    <string name="textCarbGram">0 / 0g</string>
    <string name="textCarbPct">0 / 0%</string>
    <string name="textFatLbl">Fat:</string>
    <string name="textFatGram">0 / 0g</string>
    <string name="textFatPct">0 / 0%</string>
    <string name="textCalLbl">Total:</string>
    <string name="textCal">0 / 0 Calories</string>
    <string name="grams_per_serving">Grams per Serving</string>
    <string name="grams_consumed">Grams Consumed:</string>
    <string name="grams_of_protein">Protein:</string>
    <string name="grams_of_fat">Fat:</string>
    <string name="food_name">Name:</string>
    <string name="grams_of_carbs">Carbs:</string>
    <string name="bAdd">Add</string>
    <string name="add_existing_meal">old Meal</string>
    <string name="serving_size">Serving Size:</string>
    <string name="grams">(grams)</string>
    <string name="food_name_hint">Food name</string>
    <string name="optional">(optional)</string>
    <string name="remove">remove</string>
    <string name="goalPreferenceFile">Goals</string>
    <string name="PrefProteinPct">ProteinGoal</string>
    <string name="PrefCal">CaloriesGoal</string>
    <string name="PrefCarbsPct">CarbsGoal</string>
    <string name="PrefFatPct">FatGoal</string>
</resources>
