<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545">

    <EditText
        android:id="@+id/etxtServing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/grams"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGrams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGrams"
        app:layout_constraintTop_toTopOf="@+id/tvGrams" />

    <EditText
        android:id="@+id/etxtServingsEaten"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/optional"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvServings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvServings"
        app:layout_constraintTop_toTopOf="@+id/tvServings" />

    <EditText
        android:id="@+id/etxtProtein"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/grams"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvProtein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvProtein"
        app:layout_constraintTop_toTopOf="@+id/tvProtein" />

    <EditText
        android:id="@+id/etxtFat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/grams"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFat"
        app:layout_constraintTop_toTopOf="@+id/tvFat" />

    <EditText
        android:id="@+id/etxtFoodName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/food_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvFood"
        app:layout_constraintTop_toTopOf="@+id/tvFood"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etxtCarb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/grams"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCarbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCarbs"
        app:layout_constraintTop_toTopOf="@+id/tvCarbs" />

    <Button
        android:id="@+id/bAddMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4CAF50"
        android:text="@string/bAdd"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bLookupExistingFood" />

    <TextView
        android:id="@+id/tvFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/food_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/grams_of_carbs"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFoodName" />

    <TextView
        android:id="@+id/tvFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/grams_of_fat"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtCarb" />

    <TextView
        android:id="@+id/tvProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/grams_of_protein"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtFat" />

    <TextView
        android:id="@+id/tvGrams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/serving_size"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtProtein" />

    <TextView
        android:id="@+id/tvServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/grams_consumed"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtServing" />

    <Button
        android:id="@+id/bLookupExistingFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="#673AB7"
        android:text="lookup"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bAddMeal"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>